# sumaho

./: .env.example  .gitignore  .mise.toml  MISE_VERIFICATION.md  README.md  prompt_basics.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  main.py
tests/: __init__.py  test_example.py
